precion has fixed, apply to all functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 se/meteTurkan/calculatorJava/calcScreen.java
 se/meteTurkan/calculatorJava/x.class
 *.class
+se/meteTurkan/calculatorJava/newCalculator.java
